integracion de colores y fuentes

--- a/front-end/tutorial-canciones/src/app/usuario/usuario-login/usuario-login.component.html
+++ b/front-end/tutorial-canciones/src/app/usuario/usuario-login/usuario-login.component.html
@@ -5,6 +5,16 @@
         <h2 class="my-2">Tutorial canciones</h2>
         <p class="my-2">El sitio para almacenar la información de su colección de música. En este podrá buscar de manera más facil las canciones que tiene en su fonoteca y que quiere escuchar ...</p>
       </div>
+
+      <div>
+        <h1>Titulo en h1</h1>
+        <h2>Titulo en h2</h2>
+        <h3>Titulo en h3</h3>
+        <p>Parrafo</p>
+
+      </div>
+
+
     </div>
 
     <div class="col-xs-10 col-lg-5 container" >
