--- a/front-end/tutorial-canciones/src/app/album/album-create/album-create.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-create/album-create.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container">
+<div class="container" style="background-color: yellow;">
   <div class="row justify-content-center">
     <div class="col-10">
       <div class="card mx-3 my-5">
@@ -33,7 +33,7 @@
               </div>
             </div>
           </div>
-        
+
           <div class="form-group my-2">
             <div class="row">
               <div class="col-2 text-start">
@@ -102,7 +102,7 @@
               </div>
             </div>
           </div>
-          
+
           <div class="row mt-4">
             <div class="col-6 text-end">
               <button class="btn btn-danger" (click)="cancelCreate()">Cancelar</button>
