--- a/front-end/tutorial-canciones/src/app/album/album-join-cancion/album-join-cancion.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-join-cancion/album-join-cancion.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container">
+<div class="container" style="background-color: pink;">
     <div class="row justify-content-center">
       <div class="col-10">
         <div class="card mx-3 my-5">
@@ -9,7 +9,7 @@
             </div>
           </div>
           <form class="mx-5 my-3" [formGroup]="albumCancionForm" (ngSubmit)="asociarCancion()">
-  
+
             <div class="form-group my-2">
               <div class="row">
                 <div class="col-2 text-start">
@@ -20,7 +20,7 @@
                 </div>
               </div>
             </div>
-  
+
             <div class="form-group my-2">
               <div class=" row">
                 <div class="col-2 text-start">
@@ -41,9 +41,9 @@
                 </div>
               </div>
             </div>
-  
-            
-            
+
+
+
             <div class="row mt-4">
               <div class="col-6 text-end">
                 <button class="btn btn-danger" (click)="cancelarAsociacion()">Cancelar</button>
@@ -52,8 +52,8 @@
                 <button type="submit" class="btn btn-primary" [disabled]="!albumCancionForm.valid">Asociar canción</button>
               </div>
             </div>
-  
-  
+
+
           </form>
         </div>
       </div>
