--- a/front-end/tutorial-canciones/src/app/app-header/header/header.component.html
+++ b/front-end/tutorial-canciones/src/app/app-header/header/header.component.html
@@ -1,16 +1,22 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light" >
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse">
-      <a class="navbar-brand mx-3" (click)="goTo('logIn')">Tutorial canciones</a>
+      <a class="navbar-brand mx-3" (click)="goTo('home')">Tutorial canciones</a>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" (click)="goTo('home')">Home</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" (click)="goTo('album')">Álbumes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" (click)="goTo('cancion')">Canciones</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="goTo('about')">Acerca de:</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" (click)="goTo('logIn')">Salir</a>
