Ajustes Login-SignUp

--- a/front-end/tutorial-canciones/src/app/usuario/usuario-login/usuario-login.component.html
+++ b/front-end/tutorial-canciones/src/app/usuario/usuario-login/usuario-login.component.html
@@ -1,26 +1,18 @@
 <div class="container align-items-center">
   <div class="row align-items-center">
-    <div class="col-xs-10 col-lg-5 card px-2 ">
+    <div class="col-xs-10 col-lg-5 card px-2 div-1">
       <div class="card-body text-center">
-        <h2 class="my-2">Tutorial canciones</h2>
-        <p class="my-2">El sitio para almacenar la información de su colección de música. En este podrá buscar de manera más facil las canciones que tiene en su fonoteca y que quiere escuchar ...</p>
+        <h2 class="my-4" style="text-align:center"><strong>IONIC</strong></h2>
+        <img src="../assets/rockola.png" width="180" height="250">
+        <p class="my-4">El sitio para almacenar la información de su colección de música. En este podrá buscar de manera
+          más facil las canciones que tiene en su fonoteca y que quiere escuchar ...</p>
       </div>
-
-      <div>
-        <h1>Titulo en h1</h1>
-        <h2>Titulo en h2</h2>
-        <h3>Titulo en h3</h3>
-        <p>Parrafo</p>
-
-      </div>
-
-
     </div>
 
-    <div class="col-xs-10 col-lg-5 container" >
-      <div class="row">
+    <div class="col-xs-10 col-lg-6 container div-2">
+      <div class="row align-items-center">
 
-        <div class="my-2 row">
+        <div class="my-3 row">
           <h1 class="text-center">Ingreso</h1>
         </div>
         <div *ngIf="error">
@@ -28,24 +20,26 @@
             Usuario o contraseña incorrectos
           </div>
         </div>
-        <div class="mb-3 row">
-          <label for="staticEmail" class="col-lg-3 col-form-label">Usuario</label>
-          <div class="col-lg-9  ">
-            <input #usuario type="text" class="form-control" placeholder="ejemplo@ejemplo.com">
+
+        <div class="my-3 row">
+          <div class="col-lg-6 center-block">
+            <input #usuario type="text" class="form-control" placeholder="Usuario">
           </div>
         </div>
-        <div class="mb-3 row">
-          <label for="inputPassword" class="col-lg-3 col-form-label">Contraseña</label>
-          <div class="col-lg-9">
-            <input #contrasena type="password" class="form-control" placeholder="*********">
+
+        <div class="my-3 row">
+          <div class="col-lg-6 center-block">
+            <input #contrasena type="password" class="form-control" placeholder="Contraseña">
           </div>
         </div>
-        <div class="col-12 text-center mt-3">
-          <button (click)="onLogInUsuario(usuario.value, contrasena.value)" type="button" class="btn btn-primary col-8">Ingresar</button>
+        <div class="my-4">
+          <button (click)="onLogInUsuario(usuario.value, contrasena.value)" type="button"
+            class="btn btn-primary col-6 div-3 center-block">Ingresar</button>
         </div>
-        <div class="col-12 text-center mt-2">
-          <p>¿No tienes cuenta? <a href="/signup">Registrate</a></p>
+        <div>
+          <p style="text-align: center">¿No tienes cuenta?: <a href="/signup">Registrate</a></p>
         </div>
+
       </div>
     </div>
   </div>
