--- a/front-end/tutorial-canciones/src/app/usuario/usuario-signup/usuario-signup.component.html
+++ b/front-end/tutorial-canciones/src/app/usuario/usuario-signup/usuario-signup.component.html
@@ -1,26 +1,26 @@
 <div class="container align-items-center">
   <div class="row align-items-center">
-    <div class="col-xs-10 col-lg-5 card px-2 ">
+    <div class="col-xs-10 col-lg-6 card px-2 div-1">
       <div class="card-body text-center">
-        <h2 class="my-2">Tutorial canciones</h2>
-        <p class="my-2">El sitio para almacenar la información de su colección de música. En este podrá buscar de manera más facil las canciones que tiene en su fonoteca y que quiere escuchar ...</p>
+        <h2 class="my-4" style="text-align:center" ><strong>IONIC</strong></h2>
+        <img src="../assets/rockola.png" width="180" height="250">
+        <p class="my-4">El sitio para almacenar la información de su colección de música. En este podrá buscar de manera más facil las canciones que tiene en su fonoteca y que quiere escuchar ...</p>
       </div>
     </div>
 
-    <div class="col-xs-10 col-lg-5 container" >
-      <div class="row">
+    <div class="col-xs-10 col-lg-6 container div-2" >
+      <div class="row align-items-center">
 
-        <div class="my-2 row">
+        <div class="my-3 row">
           <h1 class="text-center">Registro</h1>
         </div>
 
         <form [formGroup]="usuarioForm" (ngSubmit)="registrarUsuario()">
 
           <div class="form-group">
-            <div class="mb-3 row">
-              <label for="nombre" class="col-lg-3 col-form-label">Usuario</label>
-              <div class="col-lg-9  ">
-                <input formControlName="nombre" type="text" class="form-control" placeholder="ejemplo@ejemplo.com">
+            <div class="my-3 row">
+              <div class="col-lg-6 center-block">
+                <input formControlName="nombre" type="text" class="form-control" placeholder="Usuario">
               </div>
             </div>
             <div class="alert alert-danger my-3" *ngIf="usuarioForm.get('nombre')?.hasError('required') && usuarioForm.get('nombre')?.touched">
@@ -29,14 +29,13 @@
             <div class="alert alert-danger my-3" *ngIf="usuarioForm.get('nombre')?.hasError('maxlength')">
               El usuario no debe exceder los 50 carácteres
             </div>
-            
+
           </div>
 
           <div class="form-group">
             <div class="mb-3 row">
-              <label for="password" class="col-lg-3 col-form-label">Contraseña</label>
-              <div class="col-lg-9">
-                <input formControlName="password" type="password" class="form-control" placeholder="*********">
+              <div class="col-lg-6 center-block">
+                <input formControlName="password" type="password" class="form-control" placeholder="Contraseña">
               </div>
             </div>
             <div class="alert alert-danger my-3" *ngIf="usuarioForm.get('password')?.hasError('required') && usuarioForm.get('password')?.touched">
@@ -52,9 +51,8 @@
 
           <div class="form-group">
             <div class="mb-3 row">
-              <label for="confirmPassword" class="col-lg-3 col-form-label">Confirmar contraseña</label>
-              <div class="col-lg-9">
-                <input formControlName="confirmPassword"  type="password" class="form-control" placeholder="*********">
+              <div class="col-lg-6 center-block">
+                <input formControlName="confirmPassword"  type="password" class="form-control" placeholder="Confirmar Contraseña">
               </div>
             </div>
             <div class="alert alert-danger my-3" *ngIf="usuarioForm.get('confirmPassword')?.hasError('required') && usuarioForm.get('confirmPassword')?.touched">
@@ -72,14 +70,14 @@
           </div>
 
           <div class="col-12 text-center mt-3">
-            <button  type="submit" class="btn btn-primary col-8" [disabled]="!usuarioForm.valid || usuarioForm.get('confirmPassword')?.value !== usuarioForm.get('password')?.value">Registrarse</button>
+            <button  type="submit" class="btn btn-primary col-8 div-3" [disabled]="!usuarioForm.valid || usuarioForm.get('confirmPassword')?.value !== usuarioForm.get('password')?.value">Registrarse</button>
           </div>
           <div class="col-12 text-center mt-2">
-            <p>¿Ya tienes cuenta? <a href="/">Inicia sesión</a></p>
+            <p style="text-align: center">¿Ya tienes cuenta? <a href="/">Inicia sesión</a></p>
           </div>
 
         </form>
-        
+
       </div>
     </div>
   </div>
