--- a/front-end/tutorial-canciones/src/styles.css
+++ b/front-end/tutorial-canciones/src/styles.css
@@ -14,14 +14,14 @@
     */
 }
 html body {
-  background-color: lightgray!important;
+  background-color: lightgray !important;
 }
 .container {
   /* background-color: green !important; */
   width: 90% !important;
   height: auto !important;
   margin: auto !important;
-  max-width: none!important;
+  max-width: none !important;
 }
 
 .ionic-card {
@@ -36,7 +36,7 @@ html body {
   background-color: var(--rnr-azul) !important;
 }
 .ionic-card-body {
-  background-color: var(--rnr-beige)  !important;
+  background-color: var(--rnr-beige) !important;
 }
 .ionic-tr {
   width: 100% !important;
@@ -44,64 +44,185 @@ html body {
   /* background-color: var(--rnr-azul)!important; */
   /* border: 1px solid var(--rnr-cafe)!important; */
   display: flex !important;
-  margin-bottom: 1em!important;
+  margin-bottom: 1em !important;
 }
 .ionic-td {
   width: 100% !important;
   height: auto !important;
   background-color: var(--rnr-azul) !important;
-  margin-bottom: 0em!important;
+  margin-bottom: 0em !important;
 }
-.img-rockola{
+
+.ionic-tr:hover {
+  background: var(--rnr-mostaza) !important;
+}
+
+.ionic-ul {
+  width: 100% !important;
+  height: auto !important;
+  display: flex !important;
+  margin-bottom: 1em !important;
+}
+.ionic-li {
+  width: 100% !important;
+  height: auto !important;
+  display: flex !important;
+  margin: 0em !important;
+  margin-top: 0.5em !important;
+  margin-bottom: 0.5em !important;
+}
+.ionic-li:hover {
+  background: var(--rnr-mostaza) !important;
+}
+
+/* .ionic-td:hover {
+  background: var(--rnr-mostaza)!important
+
+} */
+.img-rockola {
   width: 15em;
   height: auto;
-  border-bottom: double var(--rnr-naranja)!important;
+  border-bottom: double var(--rnr-naranja) !important;
   padding: 1em;
 }
 
 h1 {
-  text-align: center!important;
-  font-size: 30px!important;
-  align-self: center!important;
-  font-family: titulo1!important;
-  color: var(--rnr-naranja)!important;
-  border-bottom: double var(--rnr-naranja)!important;
-  text-transform: uppercase!important;
+  text-align: center !important;
+  font-size: 30px !important;
+  align-self: center !important;
+  font-family: titulo1 !important;
+  color: var(--rnr-naranja) !important;
+  border-bottom: double var(--rnr-naranja) !important;
+  text-transform: uppercase !important;
 }
 .titulo {
-  color: white!important;
+  color: white !important;
 }
 h2 {
-  font-size: 22px!important;
-  align-self: center!important;
-  font-family: titulo2!important;
-  color: var(--rnr-cafe)!important;
-  text-align: justify!important;
-  margin: 0px!important;
-  margin-left: 0.5em!important;
+  font-size: 22px !important;
+  align-self: center !important;
+  font-family: titulo2 !important;
+  color: var(--rnr-cafe) !important;
+  text-align: justify !important;
+  margin: 0px !important;
+  margin-left: 0.5em !important;
 }
 h3 {
-  font-size: 20px!important;
-  align-self: center!important;
-  margin-left: 1em!important;
-  font-family: titulo3!important;
-  color: var(--rnr-cafe)!important;
-  text-align: justify!important;
+  font-size: 20px !important;
+  align-self: center !important;
+  margin-left: 1em !important;
+  font-family: titulo3 !important;
+  color: var(--rnr-cafe) !important;
+  text-align: justify !important;
 }
 p {
-  font-size: 20px!important;
-  align-self: center!important;
-  font-family: texto!important;
-  color: var(--rnr-cafe)!important;
+  font-size: 20px !important;
+  align-self: center !important;
+  font-family: texto !important;
+  color: var(--rnr-cafe) !important;
   margin: 0px !important;
   margin-left: 1.5em !important;
-  text-align: justify!important;
+  text-align: justify !important;
+}
+a {
+  font-size: 20px !important;
+  align-self: center !important;
+  font-family: texto !important;
+  color: var(--rnr-cafe) !important;
+  margin: 0px !important;
+  margin-left: 1.5em !important;
+  text-align: justify !important;
+}
+
+/*
+* menu
+*/
+
+.img-navbar {
+  width: 2em;
+  height: auto;
+  border-bottom: double var(--rnr-naranja) !important;
+}
+.img-menu {
+  margin: auto;
+  margin-right: 1em;
+  width: 2em;
+  height: auto;
+}
+.wrapper {
+  background-color: none;
+  display: flex;
+  width: auto;
+  align-items: stretch;
+  position: absolute;
+  z-index: 999;
+}
+#sidebar {
+  min-width: 15em;
+  max-width: 15em;
+  background: var(--rnr-azul);
+  border: 1px solid var(--rnr-cafe) !important;
+  border-radius: 0em 0em 1em 0em !important;
+
+  color: #fff;
+  transition: all 0.3s;
+}
+
+#sidebar.active {
+  margin-left: -15em;
+}
+
+#sidebar .sidebar-header {
+  padding: 1em;
+  background: var(--rnr-azul);
+}
+
+/* #sidebar ul.components {
+  border-bottom: 1px solid #47748b;
+} */
+#sidebar ul li a {
+  display: block;
+}
+.navbar-btn {
+  box-shadow: none;
+  outline: none !important;
+  border: none;
+}
+#content {
+  width: 100%;
+  padding: 20px;
+  min-height: 100vh;
+  transition: all 0.3s;
+}
+.btn-info {
+  background-color: var(--rnr-azul) !important;
+  border-radius: 0em 1em 1em 0em !important;
+  border: 1px solid var(--rnr-cafe) !important;
+}
+#sidebar ul li a:hover {
+  color: #fff;
+  background: var(--rnr-mostaza);
+}
+.line {
+  border-bottom: double var(--rnr-cafe) !important;
 }
 
 @media (max-width: 768px) {
-  /* .ionic-elemento-listado {
-    display: block!important;
-  } */
+  .texto-menu {
+    display: none;
+  }
+
+  #sidebar {
+    min-width: 10em;
+    max-width: 10em;
+  }
+
+  #sidebar.active {
+    margin-left: -10em;
+  }
+  .img-menu {
+    margin: auto!important;
+}
 }
 
 @font-face {
