creacion iconos menu

--- a/front-end/tutorial-canciones/src/app/about/about.component.html
+++ b/front-end/tutorial-canciones/src/app/about/about.component.html
@@ -1,8 +1,7 @@
 <div>
   <app-header></app-header>
-  <div class="container my-4" id="album" style="background-color: grey;">
+  <div class="container " id="album" style="background-color: grey;">
     <h1>AcercaDE</h1>
   </div>
 
   </div>
-  
