--- a/front-end/tutorial-canciones/src/app/app-header/header/header.component.html
+++ b/front-end/tutorial-canciones/src/app/app-header/header/header.component.html
@@ -1,41 +1,6 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light">
-  <div class="container-fluid">
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarTogglerDemo01"
-      aria-controls="navbarTogglerDemo01"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse">
-      <a class="navbar-brand mx-3" (click)="goTo('home')">Tutorial canciones</a>
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" (click)="goTo('home')">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="goTo('album')">Álbumes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="goTo('cancion')">Canciones</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="goTo('about')">Acerca de:</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="goTo('logIn')">Salir</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav> -->
+<div class="ionic-card-header" >
+  <h1 id="header">Ionic</h1>
 
-<div id="header">
-  <h1>esto es un header</h1>
 </div>
 
 <div class="wrapper">
@@ -46,24 +11,24 @@
     <ul class="list-unstyled components">
       <li class="nav-item ionic-li" (click)="goTo('home')">
         <p class="texto-menu">Home</p>
-        <img class="img-menu" src="/assets/rockola.png" alt="Home" />
-      </li>
+        <img class="img-menu" src="/assets/home.svg" alt="Home" />
+              </li>
       <li class="nav-item ionic-li" (click)="goTo('album')">
         <p class="texto-menu">Álbumes</p>
-        <img class="img-menu" src="/assets/rockola.png" alt="Álbumes" />
+        <img class="img-menu" src="/assets/album.svg" alt="Álbumes" />
       </li>
       <li class="nav-item ionic-li" (click)="goTo('cancion')">
         <p class="texto-menu">Canciones</p>
-        <img class="img-menu" src="/assets/rockola.png" alt="Canciones" />
+        <img class="img-menu" src="/assets/cancion.svg" alt="Canciones" />
       </li>
       <li class="nav-item ionic-li" (click)="goTo('about')">
         <p class="texto-menu">Acerca de</p>
-        <img class="img-menu" src="/assets/rockola.png" alt="Acerca de" />
+        <img class="img-menu" src="/assets/about.png" alt="Acerca de" />
       </li>
       <div class="line"></div>
       <li class="nav-item ionic-li" (click)="goTo('logIn')">
         <p class="texto-menu">Salir</p>
-        <img class="img-menu" src="/assets/rockola.png" alt="Salir" />
+        <img class="img-menu" src="/assets/salir.svg" alt="Salir" />
       </li>
     </ul>
   </nav>
