MERGE:Visualizar albumes compartidos

--- a/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.html
@@ -5,11 +5,11 @@
         <label class="fs-4 fw-bold">
           <h1>Álbum: {{album?.titulo}} ({{album?.anio}})</h1>
         </label>
-        <button *ngIf="album" type="button" class="btn btn-outline-success ms-3 me-2" (click)="goToEdit()"
+        <button *ngIf="album" type="button" id='editar_album' class="btn btn-outline-success ms-3 me-2" (click)="goToEdit()"
           title="Editar álbum"><i class="bi bi-pencil-square"></i></button>
         <button *ngIf="album" type="button" class="btn btn-outline-info me-1 me-2" (click)="goToJoinCancion()"
           title="Agregar canción"><i class="bi bi-plus"></i><i class="bi bi-music-note"></i></button>
-        <button *ngIf="album" type="button" class="btn btn-outline-danger me-1" (click)="eliminarAlbum()"
+        <button *ngIf="album" id='eliminar_album' type="button" class="btn btn-outline-danger me-1" (click)="eliminarAlbum()"
           title="Eliminar álbum"><i class="bi bi-trash-fill"></i></button>
       </div>
     </div>
