--- a/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
@@ -7,7 +7,7 @@
           <div class="row">
             <div class="col-10 col-sm text-center">
               <label class="fs-4">
-                <h1> Álbumes1</h1>
+                <h1> Álbumes</h1>
               </label>
             </div>
             <div class="col-2 col-sm  text-center">
@@ -25,7 +25,7 @@
 
           <table class="table table-hover mb-0" aria-describedby="colecName">
             <tbody>
-              <tr class="ionic-tr" *ngFor="let album of mostrarAlbumes; index as i" (click)="onSelect(album, i)"
+              <tr class="ionic-tr" *ngFor="let album of mostrarAlbumes; index as i" (click)="onSelect(album, i,false)"
                 [ngClass]="{'selected': i === indiceSeleccionado}">
                 <td class="ionic-td">
                   <p>{{album.titulo}}</p>
@@ -37,6 +37,32 @@
             </tbody>
           </table>
 
+        </div>
+      </div>
+      <div class="card ionic-card">
+        <div class="card-header ionic-card-header">
+          <div class="row">
+            <div class="col-10 col-sm text-center">
+              <label class="fs-4">
+                <h1> Álbumes Compartidos</h1>
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="card-body ionic-card-body">
+          <table class="table table-hover mb-0" aria-describedby="colecName">
+            <tbody>
+              <tr class="ionic-tr" *ngFor="let album of mostrarAlbumesCompartidos; index as i" (click)="onSelect(album, i,true)"
+                [ngClass]="{'selected': i === indiceSeleccionado}">
+                <td class="ionic-td">
+                  <p>{{album.titulo}}</p>
+                </td>
+                <td class="ionic-td">
+                  <p> {{album.anio}}</p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
