Integracion iconos crear editar adicionar eliminar, ajuste responsive

--- a/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.css
+++ b/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.css
@@ -2,5 +2,9 @@
   width: auto !important;
 }
 .contenido-tabla {
-  background-color: white;
+  background-color: white ;
+}
+p{
+  margin-left: .2em !important;
+
 }
