--- a/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
@@ -5,15 +5,20 @@
       <div class="card ionic-card">
         <div class="card-header ionic-card-header">
           <div class="row">
-            <div class="col-10 col-sm text-center">
-              <label class="fs-4">
+            <div class="col-12 text-center mb-2">
+              <label class="fs-4 fw-bold">
+
                 <h1> Álbumes1</h1>
               </label>
-            </div>
-            <div class="col-2 col-sm  text-center">
-              <button type="button" class="my-1 btn btn-outline-primary btn-circle" (click)="irCrearAlbum()"><i
-                  class="bi bi-plus-lg"></i></button>
-            </div>
+
+
+            <!-- <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-lg-2  text-center"> -->
+              <!-- <button type="button" class="btn btn-outline-primary btn-circle" ><i
+                  class="bi bi-plus-lg"></i></button> -->
+                  <img class="iconos" (click)="irCrearAlbum()" src="/assets/create.png" alt="crear" />
+
+            <!-- </div> -->
+          </div>
           </div>
         </div>
         <div class="card-body ionic-card-body">
