Ajuste a estilos, fondos, botones

--- a/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container" id="album" style="background-color: white;">
+<div class="container" id="album" style="background-color: none;">
   <div class="row align-items-center">
     <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-lg-4">
       <div class="card ionic-card">
@@ -18,7 +18,7 @@
                   <img class="iconos" (click)="irCrearAlbum()" src="/assets/create.png" alt="crear" />
 
             <!-- </div> -->
-          </div>
+            </div>
           </div>
         </div>
         <div class="card-body ionic-card-body">
