--- a/front-end/tutorial-canciones/src/app/home/home.component.html
+++ b/front-end/tutorial-canciones/src/app/home/home.component.html
@@ -9,12 +9,9 @@
   </div>
   <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-lg-6" style="padding-top:2em">
     <h1>IONIC</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pellentesque consectetur sagittis. Integer nibh
-      tellus, iaculis quis pellentesque quis, venenatis eu tortor. Nam non est suscipit, vestibulum mauris sodales,
-      ullamcorper arcu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean dictum nibh eget velit
-      hendrerit mollis at eget libero. Duis non pellentesque purus. Vestibulum ultricies libero at justo dictum, in
-      venenatis tellus placerat. Suspendisse fermentum semper leo in egestas. Nunc laoreet dictum risus, eu efficitur
-      magna interdum id. Praesent metus massa, rhoncus id mauris ut, lacinia maximus eros.</p>
+    <p>        El sitio para almacenar la información de su colección de música. En
+      este podrá buscar de manera más facil las canciones que tiene en su
+      fonoteca y que quiere escuchar ...</p>
   </div>
 </div>
 </div>
