--- a/front-end/tutorial-canciones/src/app/album/album-create/album-create.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-create/album-create.component.html
@@ -1,33 +1,56 @@
 <app-header></app-header>
-<div class="container" style="background-color: yellow;">
+<div class="container" style="background-color: none">
   <div class="row justify-content-center">
-    <div class="col-10">
-      <div class="card mx-3 my-5">
-        <div class="row">
-          <div class="col-12 text-center">
-            <p class="mt-5 mb-2 fs-3 fw-bold">Crear Álbum</p>
+    <div class="col-12">
+      <div class="card ionic-card mx-3 my-5">
+        <div class="card-header ionic-card-header">
+          <div class="row">
+            <div class="col-12 text-center">
+              <h1 class="mt-5 mb-2 fs-3 fw-bold">Crear Álbum</h1>
+            </div>
           </div>
         </div>
-        <form class="mx-5 my-3" [formGroup]="albumForm" (ngSubmit)="createAlbum(albumForm.value)">
 
+        <form
+          class="mx-5 my-3"
+          [formGroup]="albumForm"
+          (ngSubmit)="createAlbum(albumForm.value)"
+        >
           <div class="form-group my-2">
             <div class="row">
-              <div class="col-2 text-start">
-                <label for="titulo">Título </label>
+              <div class="col-12 col-md-3 col-lg-2 text-start">
+                <h2 for="titulo">Título</h2>
               </div>
-              <div class="col-10">
-                <input type="text" class="form-control" formControlName="titulo" placeholder="Titulo del album">
+              <div class="col-12 col-md-9 col-lg-10">
+                <input
+                  type="text"
+                  class="form-control"
+                  formControlName="titulo"
+                  placeholder="Titulo del album"
+                />
               </div>
             </div>
             <div class="row justify-content-center">
               <div class="col-8">
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('titulo')?.hasError('required') && albumForm.get('titulo')?.touched">
+                <div
+                  class="alert alert-danger my-3"
+                  *ngIf="
+                    albumForm.get('titulo')?.hasError('required') &&
+                    albumForm.get('titulo')?.touched
+                  "
+                >
                   Debe ingresar un título para el álbum
                 </div>
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('titulo')?.hasError('minlength')">
+                <div
+                  class="alert alert-danger my-3"
+                  *ngIf="albumForm.get('titulo')?.hasError('minlength')"
+                >
                   El título debe tener por lo menos un carácter
                 </div>
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('titulo')?.hasError('maxlength')">
+                <div
+                  class="alert alert-danger my-3"
+                  *ngIf="albumForm.get('titulo')?.hasError('maxlength')"
+                >
                   El título no debe exceder los 128 carácteres
                 </div>
               </div>
@@ -36,22 +59,39 @@
 
           <div class="form-group my-2">
             <div class="row">
-              <div class="col-2 text-start">
-                <label for="anio">Año </label>
+              <div class="col-12 col-md-3 col-lg-2 text-start">
+                <h2 for="anio">Año</h2>
               </div>
-              <div class="col-10">
-                <input type="text" class="form-control" formControlName="anio" placeholder="Año de lanzamiento">
+              <div class="col-12 col-md-9 col-lg-10">
+                <input
+                  type="text"
+                  class="form-control"
+                  formControlName="anio"
+                  placeholder="Año de lanzamiento"
+                />
               </div>
             </div>
             <div class="row justify-content-center">
               <div class="col-8">
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('anio')?.hasError('required') && albumForm.get('anio')?.touched">
+                <div
+                  class="alert alert-danger my-3"
+                  *ngIf="
+                    albumForm.get('anio')?.hasError('required') &&
+                    albumForm.get('anio')?.touched
+                  "
+                >
                   Debe ingresar un año para el álbum
                 </div>
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('anio')?.hasError('minlength')">
+                <div
+                  class="alert alert-danger my-3"
+                  *ngIf="albumForm.get('anio')?.hasError('minlength')"
+                >
                   El año debe tener 4 números
                 </div>
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('anio')?.hasError('maxlength')">
+                <div
+                  class="alert alert-danger my-3"
+                  *ngIf="albumForm.get('anio')?.hasError('maxlength')"
+                >
                   El año debe tener 4 números
                 </div>
               </div>
@@ -59,20 +99,33 @@
           </div>
 
           <div class="form-group my-2">
-            <div class=" row">
-              <div class="col-2 text-start">
-                <label for="medio">Medio </label>
+            <div class="row">
+              <div class="col-12 col-md-3 col-lg-2 text-start">
+                <h2 for="medio">Medio</h2>
               </div>
-              <div class="col-10">
+              <div class="col-12 col-md-9 col-lg-10">
                 <select class="form-select" formControlName="medio">
-                  <option value="" disabled>Selecciona el medio del álbum</option>
-                  <option *ngFor="let medio of medios" value={{medio.llave}}>{{medio.llave}}</option>
+                  <option value="" disabled>
+                    Selecciona el medio del álbum
+                  </option>
+                  <option
+                    *ngFor="let medio of medios"
+                    value="{{ medio.llave }}"
+                  >
+                    {{ medio.llave }}
+                  </option>
                 </select>
               </div>
             </div>
             <div class="row justify-content-center">
               <div class="col-8">
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('medio')?.hasError('required') && albumForm.get('medio')?.touched">
+                <div
+                  class="alert alert-danger my-3"
+                  *ngIf="
+                    albumForm.get('medio')?.hasError('required') &&
+                    albumForm.get('medio')?.touched
+                  "
+                >
                   Debe seleccionar el medio del álbum
                 </div>
               </div>
@@ -81,38 +134,60 @@
 
           <div class="form-group my-2">
             <div class="row">
-              <div class="col-2 text-start">
-                <label for="descripcion">Descripción </label>
+              <div class="col-12 col-md-3 col-lg-2 text-start">
+                <h2 for="descripcion">Descripción</h2>
               </div>
-              <div class="col-10">
-                <textarea class=" form-control" formControlName="descripcion" placeholder="Descripción del álbum"></textarea>
+              <div class="col-12 col-md-9 col-lg-10">
+                <textarea
+                  class="form-control"
+                  formControlName="descripcion"
+                  placeholder="Descripción del álbum"
+                ></textarea>
               </div>
             </div>
             <div class="row justify-content-center">
               <div class="col-8">
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('descripcion')?.hasError('required') && albumForm.get('descripcion')?.touched">
+                <div
+                  class="alert alert-danger my-3"
+                  *ngIf="
+                    albumForm.get('descripcion')?.hasError('required') &&
+                    albumForm.get('descripcion')?.touched
+                  "
+                >
                   Debe ingresar una descripción para el álbum
                 </div>
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('descripcion')?.hasError('minlength')">
+                <div
+                  class="alert alert-danger my-3"
+                  *ngIf="albumForm.get('descripcion')?.hasError('minlength')"
+                >
                   La descripción del álbum debe tener por lo menos un carácter
                 </div>
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('descripcion')?.hasError('maxlength')">
+                <div
+                  class="alert alert-danger my-3"
+                  *ngIf="albumForm.get('descripcion')?.hasError('maxlength')"
+                >
                   La descripción del álbum no debe superar los 512 carácteres
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="row mt-4">
-            <div class="col-6 text-end">
-              <button class="btn btn-danger" (click)="cancelCreate()">Cancelar</button>
+          <div class="row mt-4 justify-content-sm-center">
+            <div class="col-12 col-sm-auto text-center">
+              <button class="btn btn-danger" (click)="cancelCreate()">
+                Cancelar
+              </button>
             </div>
-            <div class="col-6 text-start">
-              <button type="submit" class="btn btn-primary" [disabled]="!albumForm.valid">Crear</button>
+            <div class="col-12 col-sm-auto text-center">
+              <button
+                type="submit"
+                class="btn btn-primary"
+                [disabled]="!albumForm.valid"
+              >
+                Crear
+              </button>
             </div>
           </div>
-
-
         </form>
       </div>
     </div>
