--- a/front-end/tutorial-canciones/src/app/app.component.css
+++ b/front-end/tutorial-canciones/src/app/app.component.css
@@ -1,6 +1,7 @@
-.raiz{
+.raiz {
   width: 100%;
   height: auto;
   /* background-color: var(--rnr-cafe); */
-  background: white;
+  /* background: white; */
+  background-image: linear-gradient(0deg, white 0, var(--rnr-mostaza) 100%);
 }
