--- a/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.css
+++ b/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.css
@@ -16,3 +16,10 @@ p{
   margin-left: .2em !important;
 
 }
+
+.navbar-expand-sm .navbar-collapse {
+  justify-content: center;
+}
+form{
+text-align: center;
+}
