--- a/front-end/tutorial-canciones/src/app/usuario/usuario-login/usuario-login.component.css
+++ b/front-end/tutorial-canciones/src/app/usuario/usuario-login/usuario-login.component.css
@@ -6,7 +6,7 @@
 .div-2 {
   margin-top: 20px;
   padding: 20px;
-  background-color: #ffffff;
+  background-color: none;
 }
 .div-3 {
   background-color: var(--rnr-naranja);
