--- a/front-end/tutorial-canciones/src/app/usuario/usuario-signup/usuario-signup.component.html
+++ b/front-end/tutorial-canciones/src/app/usuario/usuario-signup/usuario-signup.component.html
@@ -1,6 +1,6 @@
 <div class="container align-items-center">
   <div class="row align-items-center">
-    <div class="col-xs-10 col-lg-6 card px-2 div-1">
+    <div class="col-6 card box px-2 div-1">
       <div class="card-body text-center">
         <h2 class="my-4" style="text-align:center" ><strong>IONIC</strong></h2>
         <img src="../assets/rockola.png" width="180" height="250">
@@ -8,9 +8,8 @@
       </div>
     </div>
 
-    <div class="col-xs-10 col-lg-6 container div-2" >
+    <div class="col-6 box div-2" >
       <div class="row align-items-center">
-
         <div class="my-3 row">
           <h1 class="text-center">Registro</h1>
         </div>
