--- a/front-end/tutorial-canciones/src/app/usuario/usuario-login/usuario-login.component.html
+++ b/front-end/tutorial-canciones/src/app/usuario/usuario-login/usuario-login.component.html
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <div class="col-xs-10 col-lg-6 container div-2">
+    <div class="col-xs-10 col-lg-6  div-2">
       <div class="col-6 container div-2">
         <div class="row align-items-center">
           <div class="my-3 row">
@@ -64,7 +64,7 @@
             </button>
           </div>
           <div>
-            <p style="text-align: center">
+            <p style="text-align: center; color:black" >
               ¿No tienes cuenta?: <a href="/signup">Registrate</a>
             </p>
           </div>
