--- a/front-end/tutorial-canciones/src/styles.css
+++ b/front-end/tutorial-canciones/src/styles.css
@@ -341,3 +341,12 @@ Botones
   font-family: titulo3;
   src: url("./fonts/Bungee_Shade/BungeeShade-Regular.ttf") format("truetype");
 }
+.footer {
+  bottom: 0px;
+  width: 100%;
+  height: 10px;
+  background-color: var(--rnr-azul) !important;
+}
+.about-frame {
+ background-color: #EBBB20  ;
+}
