--- a/front-end/tutorial-canciones/src/app/about/about.component.html
+++ b/front-end/tutorial-canciones/src/app/about/about.component.html
@@ -8,7 +8,7 @@
         <div class="col">
           <div class="p-5 about-frame"><h1>Acerca del proyecto IONIC</h1>
             <p class="p-3">Este sitio para almacenar la información de su colección personal de
-              música fue creado dentro de la asignatura Procesos de Desarrollo Ágil dentro de la
+              música fue creado dentro de la asignatura de Procesos de Desarrollo Ágil dentro de la
               Maestría en Ingeniería de Software MISO de la Universidad de lo Andes. En este sitio
               usted podrá buscar de manera más facil las canciones que tiene en su fonoteca y que
               quiere escuchar, de igual forma podrá compartir sus albumes con otros usuarios del sitio.</p>
