--- a/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.html
@@ -134,4 +134,28 @@
       </table>
     </div>
   </div>
+  <div class="row card ionic-card">
+    <div class="card-header ionic-card-header">
+      <div class="col-12 mt-3 mb-2 ms-2">
+        <h2>Comentarios sobre el albúm<img class="iconos" src="/assets/create.png" alt="crear" /></h2>
+
+      </div>
+    </div>
+    <div class="col-12 card-body ionic-card-body">
+      <table class="table table-hover table-bordered">
+        <thead class="table-light">
+          <tr>
+            <th scope="col" class="text-center ionic-td titulo-tabla">
+              <p>" comentario.texto , comenario.fecha "</p>
+            </th>
+          </tr>
+          <tr>
+            <th scope="col" class="text-center ionic-td titulo-tabla">
+              <p>Luis: Yo estuve en el lanzamiento del álbum, muy bueno!</p><p>ayer</p>
+            </th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+  </div>
 </div>
